--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
     "description": "Enhance YAML file navigation with import resolution and anchor referencing.",
     "version": "0.0.5",
     "publisher": "Oliver Dirr",
+    "icon": "images/logo.png",
     "private": true,
     "license": "MIT",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/31oli31/YAML-Navigator"
-    },
     "engines": {
         "vscode": "^1.94.2"
     },
