--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "yaml-anchor-navigator",
+    "name": "yaml-cross-file-navigator",
     "displayName": "YAML Navigator",
     "description": "Enhance YAML file navigation with import resolution and anchor referencing.",
     "version": "0.1.2",
